# agentic

./: .coverage  .gitignore  Makefile  README.md  langgraph.json  main.py  pyproject.toml  server.py
src/: main.py  workflow.py
src/agents/: __init__.py
src/api/: app.py
src/config/: __init__.py  agents.py  env.py
src/crawler/: crawler.py
src/graph/: builder.py  nodes.py  types.py
src/llms/: llm.py
src/prompts/: coordinator.md  planner.md  supervisor.md  template.py
src/service/: workflow_service.py
src/tools/: __init__.py  browser.py  crawl.py
tests/integrations/: test_agents.py  test_bash_tool.py  test_browser.py  test_crawler.py  test_crawler_article.py  test_python_repl_tool.py  test_team_config.py  test_workflow.py
