[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic"
version = "0.1.0"
description = "Agentic"
readme = "README.md"
authors = [
  { name = "Riccardo La Rosa", email = "r.larosa@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.3.21",
    "langsmith>=0.3.19",
    "langchain_anthropic>=0.3.10",
    "langchain-community>=0.3.19",
    "langchain-experimental>=0.3.4",
    "langgraph-api>=0.0.38",
    "langgraph-cli[inmem]>=0.1.81",
    "langchain-core>=0.3.49",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "langchain-openai>=0.3.11",
    "langchain-deepseek>=0.1.3",
    "litellm>=1.65.0",
    "json-repair>=0.40.0",
    "browser-use>=0.1.24",
    "markdownify>=1.1.0",
    "readabilipy>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
'''

